Use the current visible URL for add to homescreen.

This addresses a bug where invoking add to homescreen prior to
navigation commit led to a null icon being generated for the page. This
causes either:

a) no shortcut to be added (pre Android O); or
b) a crash (Android O+)

The fix replaces the use of the last committed URL with the current
visible URL. This is arguably more correct since all other items in the
Chrome menu determine their enabled state based on the visible URL, not
the last committed URL.

BUG=747959

Change-Id: If1f431ca29f5948ee6f562e2db773d408218bde7
Reviewed-on: https://chromium-review.googlesource.com/604819
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493263}
Former-commit-id: e915a0344793b323a2fcb79216f9585912781dbe