chrome/android/java/src/org/chromium/chrome/browser/webapps/AddToHomescreenManager.java
@@ -6,6 +6,7 @@ package org.chromium.chrome.browser.webapps;
 
 import android.app.Activity;
 import android.graphics.Bitmap;
+import android.text.TextUtils;
 
 import org.chromium.base.annotations.CalledByNative;
 import org.chromium.chrome.browser.tab.Tab;
@@ -42,6 +43,9 @@ public class AddToHomescreenManager {
 
     /** Starts add-to-homescreen process. */
     public void start() {
+        // Don't start if we've already started or if there is no visible URL to add.
+        if (mNativeAddToHomescreenManager != 0 || TextUtils.isEmpty(mTab.getUrl())) return;
+
         mNativeAddToHomescreenManager = nativeInitializeAndStart(mTab.getWebContents());
     }
 
@@ -54,17 +58,20 @@ public class AddToHomescreenManager {
      * Puts the object in a state where it is safe to be destroyed.
      */
     public void destroy() {
-        nativeDestroy(mNativeAddToHomescreenManager);
-
         mObserver = null;
+        if (mNativeAddToHomescreenManager == 0) return;
+
+        nativeDestroy(mNativeAddToHomescreenManager);
         mNativeAddToHomescreenManager = 0;
     }
 
     /**
-     * Adds a shortcut for the current Tab.
+     * Adds a shortcut for the current Tab. Must not be called unless start() has been called.
      * @param userRequestedTitle Title of the shortcut displayed on the homescreen.
      */
     public void addShortcut(String userRequestedTitle) {
+        assert mNativeAddToHomescreenManager != 0;
+
         nativeAddShortcut(mNativeAddToHomescreenManager, userRequestedTitle);
     }
 
